[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/design_screen.gd" id="1"]
[ext_resource type="Script" path="res://scripts/starfield.gd" id="2"]

[node name="DesignScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="Starfield" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBox/HeaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HeaderVBox" type="VBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleHBox" type="HBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/TitleHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ROCKET DESIGNER"

[node name="DesignNameLabel" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/TitleHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.5, 0.8, 1.0, 1)
text = "- Design #1"

[node name="Subtitle" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Design your rocket to reach Low Earth Orbit"
horizontal_alignment = 1

[node name="MissionInfo" type="HBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="TargetDV" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Target Δv: 9,200 m/s"

[node name="PayloadContainer" type="HBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PayloadLabel" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo/PayloadContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Payload:"

[node name="PayloadDecreaseBtn" type="Button" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo/PayloadContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "-"

[node name="PayloadValue" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo/PayloadContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "8,000 kg"
horizontal_alignment = 1

[node name="PayloadIncreaseBtn" type="Button" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo/PayloadContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "+"

[node name="ContentHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="StagesPanel" type="PanelContainer" parent="MarginContainer/VBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="StagesMargin" type="MarginContainer" parent="MarginContainer/VBox/ContentHBox/StagesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="StagesVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/StagesPanel/StagesMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StagesTitle" type="Label" parent="MarginContainer/VBox/ContentHBox/StagesPanel/StagesMargin/StagesVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ROCKET STAGES"
horizontal_alignment = 1

[node name="StagesSubtitle" type="Label" parent="MarginContainer/VBox/ContentHBox/StagesPanel/StagesMargin/StagesVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Stage 1 fires first (bottom), last stage reaches orbit"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ContentHBox/StagesPanel/StagesMargin/StagesVBox"]
layout_mode = 2

[node name="StagesScroll" type="ScrollContainer" parent="MarginContainer/VBox/ContentHBox/StagesPanel/StagesMargin/StagesVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StagesList" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/StagesPanel/StagesMargin/StagesVBox/StagesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="EnginesPanel" type="PanelContainer" parent="MarginContainer/VBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="EnginesMargin" type="MarginContainer" parent="MarginContainer/VBox/ContentHBox/EnginesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="EnginesVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/EnginesPanel/EnginesMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnginesTitle" type="Label" parent="MarginContainer/VBox/ContentHBox/EnginesPanel/EnginesMargin/EnginesVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "AVAILABLE ENGINES"
horizontal_alignment = 1

[node name="EnginesSubtitle" type="Label" parent="MarginContainer/VBox/ContentHBox/EnginesPanel/EnginesMargin/EnginesVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Click to add a stage"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ContentHBox/EnginesPanel/EnginesMargin/EnginesVBox"]
layout_mode = 2

[node name="EnginesList" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/EnginesPanel/EnginesMargin/EnginesVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="FooterPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="FooterMargin" type="MarginContainer" parent="MarginContainer/VBox/FooterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="FooterVBox" type="VBoxContainer" parent="MarginContainer/VBox/FooterPanel/FooterMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DVProgress" type="ProgressBar" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)
max_value = 100.0
value = 50.0
show_percentage = false

[node name="DVInfo" type="HBoxContainer" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DVLabel" type="Label" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/DVInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Δv: 0 / 9,200 m/s"

[node name="DVStatus" type="Label" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/DVInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "INSUFFICIENT"

[node name="Spacer" type="Control" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/DVInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SuccessLabel" type="Label" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/DVInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Success Rate: 85%"

[node name="BudgetInfo" type="HBoxContainer" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CostLabel" type="Label" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/BudgetInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Cost: $0"

[node name="BudgetStatus" type="Label" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/BudgetInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
text = "WITHIN BUDGET"

[node name="Spacer2" type="Control" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/BudgetInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RemainingLabel" type="Label" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/BudgetInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Remaining: $100,000,000"

[node name="ButtonsHBox" type="HBoxContainer" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "BACK"

[node name="SaveButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "SAVE DESIGN"

[node name="LaunchButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 20
text = "CONTINUE TO TESTING"

[node name="RocketDesigner" type="RocketDesigner" parent="."]

[connection signal="pressed" from="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo/PayloadContainer/PayloadDecreaseBtn" to="." method="_on_payload_decrease_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/MissionInfo/PayloadContainer/PayloadIncreaseBtn" to="." method="_on_payload_increase_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/ButtonsHBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/ButtonsHBox/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/FooterVBox/ButtonsHBox/LaunchButton" to="." method="_on_launch_button_pressed"]
